--- a/UI/src/app/app.component.html
+++ b/UI/src/app/app.component.html
@@ -2,8 +2,18 @@
 <br>
 <nav>
   <ul>
-    <li><a routerLink="/generator" routerLinkActive="active" ariaCurrentWhenActive="page">Content Generator</a></li>
+    <li><a routerLink="/drawer" routerLinkActive="active" ariaCurrentWhenActive="page">Add Book</a></li>
     <li><a routerLink="/books" routerLinkActive="active" ariaCurrentWhenActive="page">Books Record</a></li>
+    <li><a routerLink="/generator" routerLinkActive="active" ariaCurrentWhenActive="page">Content Generator</a></li>
   </ul>
 </nav>
+
+<!-- <mat-tab-group dynamicHeight>
+  
+    <a routerLink="/generator" routerLinkActive="active" ><mat-tab label="Prompt"></mat-tab></a>
+  
+  
+<a routerLink="/books" routerLinkActive="active"><mat-tab label="Books "></mat-tab></a>
+
+</mat-tab-group> -->
 <router-outlet></router-outlet>
