--- a/UI/src/app/books/books.component.html
+++ b/UI/src/app/books/books.component.html
@@ -1,14 +1,16 @@
 <!-- <div class="table-wrapper"> -->
+  <!-- <div>
+    <button>add</button>
+  </div> -->
 
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 tbl">
-
     <!-- ID Column -->
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef> No. </th>
       <td mat-cell *matCellDef="let element"> {{element.id}} </td>
     </ng-container>
     <ng-container matColumnDef="num">
-      <th mat-header-cell *matHeaderCellDef> No. </th>
+      <th mat-header-cell *matHeaderCellDef> # </th>
       <td mat-cell *matCellDef="let element"> {{element.num}} </td>
     </ng-container>
     
